# donna

./: .env.example  .gitattributes  .gitignore  .sops.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: CODEX_DEEP_DIVE.md  CODEX_REVIEW_DONNA_v0.4.0.md  CODEX_REVIEW_DONNA_v0.4.0_GPT5.md  CODEX_REVIEW_DONNA_v0.4.0_GPT53CODEX.md  CODEX_REVIEW_DONNA_v0.4.0_GPT55PRO.md  CONTINUE_HERE.html  CONTINUE_HERE.md  CORPUS_BRIEF.md  KNOWN_ISSUES.md  LIVE_RUN_SETUP.md  MARKET_RESEARCH_SESSION.md  MORNING_START.md  NEXT_SESSION_DONNA.md  OPERATIONS.md  PATH_3_INVARIANTS.md  PHASE_1_ARCHITECTURE.md  PLAN.md  POST_COMPACTION_2026_04_30.md  POST_COMPACTION_2026_05_01.md  POST_COMPACTION_2026_05_02.md  POST_COMPACTION_2026_05_14.md  RELEASE_SOAK_POLICY.md  RESTORE_DRILL.md  REVIEW_COMPARISON_GPT5_VARIANTS.md  REVIEW_SYNTHESIS_v0.4.0.md  SCHEDULER_SMOKE_TEST.md  SCHEMA_LIFECYCLE.md  SESSION_RESUME.md  THINK_BRIEF.md  morning.html  review.html
evals/: README.md  runner.py
migrations/: env.py
scripts/: donna-backup.sh  donna-fetch-backup.ps1  donna-freeze.sh  donna-restore-drill.sh  donna-verify-backup.sh  entrypoint.sh  first-deploy.sh  harden-droplet.sh  install-freeze-hook.sh  setup_local.ps1  slack_smoke.py  test-freeze-hook.sh
secrets/: README.md  prod.enc.yaml
tests/: conftest.py  test_adversarial_fixes.py  test_alert_digest.py  test_async_tasks.py  test_audit_denied_tool_calls.py  test_botctl_artifacts.py  test_botctl_dead_letter.py  test_botctl_forget_artifact.py  test_botctl_heuristics.py  test_botctl_pretty_task.py  test_botctl_slack_doctor.py  test_brief_runs_status_flow.py  test_bundle1_feels_like_it_works.py  test_challenge_fixes.py  test_chunker.py  test_codex_round2_fixes.py  (+53 more)
(+141 files in other folders)
