[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "donna"
version = "0.1.0"
description = "Donna — personal AI assistant bot"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "GlobalCan" }]

dependencies = [
    "anthropic>=0.40.0",
    "discord.py>=2.5.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "voyageai>=0.3.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "apscheduler>=3.10.4",
    "pypdf>=4.0.0",
    "markdownify>=0.12.0",
    "sqlite-vec>=0.1.1",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "croniter>=2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-croniter",
]

[project.scripts]
donna = "donna.main:main"
donna-worker = "donna.worker:main"
botctl = "donna.cli.botctl:app"

[tool.hatch.build.targets.wheel]
packages = ["src/donna"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
